--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
-    "@mui/material": "^5.11.9"
+    "@mui/material": "^5.11.9",
+    "run": "^1.4.0"
   }
 }
